--- a/indexEn.html
+++ b/indexEn.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
 	<meta charset="UTF-8" />
@@ -51,21 +51,21 @@
 							</span>
 						</label>
 
-						<a href="./es/seccions/ciudad.html" style="--a: 0">Ciudad</a>
-						<a href="./es/seccions/bosques.html" style="--a: 1">Bosque</a>
-						<a href="./es/seccions/tundra.html" style="--a: 2">Tundra</a>
-						<a href="./es/seccions/desierto.html" style="--a: 3">Desierto</a>
-						<a href="./es/seccions/playa.html" style="--a: 4">Playa</a>
+						<a href="./en/seccions/ciudad.html" style="--a: 0">City</a>
+						<a href="./en/seccions/bosques.html" style="--a: 1">Forest</a>
+						<a href="./en/seccions/tundra.html" style="--a: 2">Tundra</a>
+						<a href="./en/seccions/desierto.html" style="--a: 3">Desert</a>
+						<a href="./en/seccions/playa.html" style="--a: 4">Beach</a>
 
-						<div class="translate">
-							<span class="material-symbols-outlined">
-								language
-								</span>
-							<select onchange="window.location.href = this.value">
-								<option value="./index.html">Es</option>
-								<option value="./indexEn.html">En</option>
-							  </select>
-						</div>
+                        <div class="translate">
+                            <span class="material-symbols-outlined">
+                                language
+                                </span>
+                            <select onchange="window.location.href = this.value">
+                                <option value="./indexEn.html">En</option>
+                                <option value="./index.html">Es</option>
+                              </select>
+                        </div>
 
 					</ul>
 				</div>
@@ -96,7 +96,7 @@
 				<div class="dropdown__menu">
 
 					<div class="dropdown__title">
-						<span> Biomas <span class="material-symbols-outlined">
+						<span> Biomes <span class="material-symbols-outlined">
 							expand_more
 					</div>
 
@@ -104,22 +104,22 @@
 					
 
 					<ul class="dropdown__links">
-						<a href="./es/seccions/ciudad.html"  	style="--a: 1"	class="bioma__link">Ciudad</a>
-						<a href="./es/seccions/bosques.html" 	style="--a: 2"	class="bioma__link">Bosque</a>
-						<a href="./es/seccions/tundra.html" 	style="--a: 3"	class="bioma__link">Tundra</a>
-						<a href="./es/seccions/desierto.html"	style="--a: 4"	class="bioma__link">Desierto</a>
-						<a href="./es/seccions/playa.html"		style="--a: 5"	class="bioma__link">Playa</a>
+						<a href="./en/seccions/ciudad.html"  	style="--a: 1"	class="bioma__link">City</a>
+						<a href="./en/seccions/bosques.html" 	style="--a: 2"	class="bioma__link">Forest</a>
+						<a href="./en/seccions/tundra.html" 	style="--a: 3"	class="bioma__link">Tundra</a>
+						<a href="./en/seccions/desierto.html"	style="--a: 4"	class="bioma__link">Desert</a>
+						<a href="./en/seccions/playa.html"		style="--a: 5"	class="bioma__link">Beach</a>
 					</ul>
 				</div>
 
 				<ul class="navbar__links">
-					<a href="/">Restaurantes</a>
-					<a href="/">Hoteles</a>
+					<a href="/">Restaurants</a>
+					<a href="/">Hotels</a>
 				</ul>
 
 				<!-- input de buscardor -->
 				<form class="navbar__search">
-					<input type="text" placeholder="biomas,restaurantes...">
+					<input type="text" placeholder="biomes,restaurants...">
 					<button class="material-symbols-outlined">search</button>
 				</form>
 
@@ -128,18 +128,17 @@
 					<span class="material-symbols-outlined">
 						account_circle
 					</span>
-					<a href="/">Iniciar Sesión</a>
+					<a href="/">Login</a>
 				</div>
 
-				<!-- cambiar idioma -->
-
-				<div class="translate">
+                <!-- translate -->
+                <div class="translate">
                     <span class="material-symbols-outlined">
                         language
                         </span>
                     <select onchange="window.location.href = this.value">
-                        <option value="./index.html">Es</option>
                         <option value="./indexEn.html">En</option>
+                        <option value="./index.html">Es</option>
                       </select>
                 </div>
 
@@ -156,7 +155,7 @@
 
 			<article class="hero__title">
 				<h1>
-					Descubre la magia de Colombia y Venezuela
+					Discover the magic of Colombia and Venezuela
 				</h1>
 			</article>
 
@@ -216,7 +215,7 @@
 		<section class="sites">
 
 			<article class="sites__title">
-				<h2>Lugares emocionantes por visitar</h2>
+				<h2>Exciting places to visit</h2>
 			</article>
 
 
@@ -395,7 +394,7 @@
 		<!-- seccion de biomas -->
 		<section class="biomas__container">
 			<article class="biomas__title">
-				<h2>Maravillosos biomas por conocer</h2>
+				<h2>Wonderful biomes to discover</h2>
 			</article>
 
 
@@ -404,12 +403,12 @@
 
 				<a href="/es/seccions/ciudad.html" class="bioma__card ciudad">
 					<div class="card__mask"></div>
-					<span>Ciudad</span>
+					<span>City</span>
 				</a>
 
 				<a href="/es/seccions/bosques.html" class="bioma__card bosque">
 					<div class="card__mask"></div>
-					<span>Bosque</span>
+					<span>Forest</span>
 				</a>
 
 				<a href="/es/seccions/tundra.html" class="bioma__card tundra">
@@ -419,12 +418,12 @@
 
 				<a href="/es/seccions/playa.html" class="bioma__card playa">
 					<div class="card__mask"></div>
-					<span>Playa</span>
+					<span>Beach</span>
 				</a>
 
 				<a href="/es/seccions/desierto.html" class="bioma__card desierto">
 					<div class="card__mask"></div>
-					<span>Desierto</span>
+					<span>Desert</span>
 				</a>
 
 			</div>
@@ -446,14 +445,14 @@
 		<form action="" class="newsletter__forms">
 
 			<h3>
-				Suscribete a nuestro Newsletters!
+				Subscribe to our Newsletters!
 			</h3>
 
 			<article class="input__container">
 
-				<input type="email" placeholder="Coloca tu correo">
+				<input type="email" placeholder="Enter your email">
 
-				<button type="submit">Suscribirse</button>
+				<button type="submit">Suscribe</button>
 			</article>
 
 		</form>
@@ -462,11 +461,11 @@
 		<article class="footer__links">
 
 			<ul class="biomas__links">
-				<a href="./es/seccions/ciudad.html">Ciudad</a>
-				<a href="./es/seccions/bosques.html">Bosques</a>
+				<a href="./es/seccions/ciudad.html">City</a>
+				<a href="./es/seccions/bosques.html">Forest</a>
 				<a href="./es/seccions/tundra.html">Tundra</a>
-				<a href="./es/seccions/playa.html">Playa</a>
-				<a href="./es/seccions/desierto.html">Desierto</a>
+				<a href="./es/seccions/playa.html">Beach</a>
+				<a href="./es/seccions/desierto.html">Desert</a>
 			</ul>
 
 			<ul class="social__links">
@@ -480,15 +479,15 @@
 
 		<article class="footer__terms">
 
-			<span class="terms_span">© 2023 BioMontrails. Todos los derechos Reservados.</span>
+			<span class="terms_span">© 2023 BioMontrails. All rights reserved</span>
 
 			<div class="logo">
 				<a href="/">Bi<span class="material-symbols-outlined">light_mode</span>montrails</h1>
 			</div>
 
 			<div class="terms_links">
-				<a href="/">Términos del servicio</a>
-				<a href="/">Política de Privacidad</a>
+				<a href="/">Terms of Service</a>
+				<a href="/">Privacy Policy</a>
 			</div>
 
 		</article>
