--- a/es/seccions/ciudad.html
+++ b/es/seccions/ciudad.html
@@ -179,13 +179,13 @@
 
                     <article class="modal_content">
                         <div class="modal__img">
-                            <img src="../../assets/img/tundra/modal paramo/parque_nacional_sierra_de_la_culata.jpg"
+                            <img src="../../assets/img/hero/ciudad.webp"
                                 alt="parque paramo la culata" />
                             <p>
-                                Situados en el estado Falcón, en el noroeste de Venezuela, los Médanos de Coro son una
-                                joya geológica.
-                                Sus imponentes dunas de
-                                hasta 40 metros de altura te dejarán sin aliento.
+                                gastronomía diversa y
+                      transporte público eficiente. Además, ofrece eventos,
+                      vida nocturna y oportunidades de aventura,
+                      lo que la convierte en un atractivo destino turístico en América Latina.
                             </p>
                         </div>
                         <!-- google maps -->
