--- a/es/seccions/tundra.html
+++ b/es/seccions/tundra.html
@@ -188,10 +188,11 @@
                             </p>
                         </div>
                         <!-- google maps -->
-                        <iframe
-                            src="https://storage.googleapis.com/maps-solutions-61wxdnt2l3/neighborhood-discovery/ngcz/neighborhood-discovery.html"
-                            width="50%" height="100%" style="border: 0" loading="lazy">
-                        </iframe>
+                        <iframe src="https://storage.googleapis.com/maps-solutions-61wxdnt2l3/neighborhood-discovery/oos5/neighborhood-discovery.html"
+                        width="50%" height="100%"
+                        style="border:0;"
+                        loading="lazy">
+                      </iframe>
                         <label for="modalToggle" class="modal__close"><span class="material-symbols-outlined">
                                 close
                             </span></label>
