--- a/indexEn.html
+++ b/indexEn.html
@@ -401,27 +401,27 @@
 			<div class="biomas__cards">
 
 
-				<a href="/es/seccions/ciudad.html" class="bioma__card ciudad">
+				<a href="/en/seccions/ciudad.html" class="bioma__card ciudad">
 					<div class="card__mask"></div>
 					<span>City</span>
 				</a>
 
-				<a href="/es/seccions/bosques.html" class="bioma__card bosque">
+				<a href="/en/seccions/bosques.html" class="bioma__card bosque">
 					<div class="card__mask"></div>
 					<span>Forest</span>
 				</a>
 
-				<a href="/es/seccions/tundra.html" class="bioma__card tundra">
+				<a href="/en/seccions/tundra.html" class="bioma__card tundra">
 					<div class="card__mask"></div>
 					<span>Tundra</span>
 				</a>
 
-				<a href="/es/seccions/playa.html" class="bioma__card playa">
+				<a href="/en/seccions/playa.html" class="bioma__card playa">
 					<div class="card__mask"></div>
 					<span>Beach</span>
 				</a>
 
-				<a href="/es/seccions/desierto.html" class="bioma__card desierto">
+				<a href="/en/seccions/desierto.html" class="bioma__card desierto">
 					<div class="card__mask"></div>
 					<span>Desert</span>
 				</a>
